--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   single-header:
     name: Single header
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
 
     - uses: actions/checkout@v2
@@ -56,3 +56,9 @@ jobs:
           CLI11.hpp
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Rich Code Nav
+      uses: microsoft/RichCodeNavIndexer@v0.1.16
+      with:
+        repo-token: ${{ github.token }}
+        languages: cpp
