--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
     - uses: actions/setup-python@v2
 
     - name: Prepare CMake config
-      run: cmake -S . -B build -DCLI11_SINGLE_FILE=ON
+      run: cmake -S . -B build -DCLI11_SINGLE_FILE=ON -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
 
     - name: Make package
-      run: cmake --build build --target package_source
+      run: cmake --build build --target package_source 
 
     - name: Copy source packages
       run: |
@@ -37,25 +37,6 @@ jobs:
 
     - name: Copy file to main folder
       run: cp build/include/CLI11.hpp CLI11.hpp
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: CLI11.hpp
-        path: CLI11.hpp
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: CLI11-Source
-        path: CLI11-Source
-
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-        files: |
-          CLI11.hpp
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Rich Code Nav
       uses: microsoft/RichCodeNavIndexer@v0.1.16
